--- a/Calculator.API/Calculator.API/Calculator.API.csproj
+++ b/Calculator.API/Calculator.API/Calculator.API.csproj
@@ -8,4 +8,11 @@
       <ProjectReference Include="..\Calculator.Business\Calculator.Business.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Serilog.Extensions.Hosting" Version="3.1.0" />
+      <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+      <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
+    </ItemGroup>
+
 </Project>
