--- a/Calculator.API/Calculator.Business/Calculator.Business.csproj
+++ b/Calculator.API/Calculator.Business/Calculator.Business.csproj
@@ -5,15 +5,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Bootstrap" />
-    </ItemGroup>
-
-    <ItemGroup>
       <ProjectReference Include="..\Calculator.Dto\Calculator.Dto.csproj" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="FluentValidation.AspNetCore" Version="9.4.0" />
+      <PackageReference Include="Serilog" Version="2.10.0" />
     </ItemGroup>
 
 </Project>
