Added payback table plan

--- a/Calculator.API/Calculator.API/appsettings.json
+++ b/Calculator.API/Calculator.API/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "swagger": {
+    "enabled": true,
+    "name": "v1",
+    "title": "Account",
+    "version": "v1",
+    "routePrefix": "docs"
+  },
   "Serilog": {
     "MinimumLevel": "Debug",
     "WriteTo": [
