--- a/Calculator.API/Calculator.API/appsettings.json
+++ b/Calculator.API/Calculator.API/appsettings.json
@@ -2,7 +2,7 @@
   "swagger": {
     "enabled": true,
     "name": "v1",
-    "title": "Account",
+    "title": "Loan",
     "version": "v1",
     "routePrefix": "docs"
   },
