--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,7 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
-      working-directory: .\Calculator.API
+      working-directory: ./Calculator.API
     - name: Test
       run: dotnet test --no-build --verbosity normal
-      working-directory: .\Calculator.API
+      working-directory: ./Calculator.API
