--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
+    "@ngxs/store": "^3.7.1",
     "@swimlane/ngx-charts": "^17.0.0",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
